--- a/my_app/style.css
+++ b/my_app/style.css
@@ -1,12 +1,5 @@
-@import "node_modules/ol/ol.css";
-
-html, body {
-  margin: 0;
-  height: 100%;
-}
-#map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+.map {
+  width: 80vw;
+  height: 60vh;
+  margin: 20px 0;
 }
