--- a/my_app/style.css
+++ b/my_app/style.css
@@ -36,3 +36,34 @@
   font-weight:bold;
   z-index: 100;
 }
+
+button {
+  position: absolute;
+  bottom: 30px;
+  left: 10px;
+  background: rgb(174, 193, 204);
+  padding: 5px;
+  border-radius: 5px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight:bold;
+  z-index: 100;
+  visibility: hidden;
+}
+
+#clicked-coordinates {
+  position: absolute;
+  bottom: 50px;
+  left: 10px;
+  background: rgb(235, 166, 166);
+  padding: 5px;
+  border-radius: 5px;
+  z-index: 100;
+  font-weight:bold;
+  font-size: 14px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.copy-icon {
+  cursor: pointer;
+  margin-left: 10px;
+}
