add graphical scaleline

--- a/my_app/style.css
+++ b/my_app/style.css
@@ -127,3 +127,16 @@
     height: calc(100vh - 50px);
   }
 }
+
+.ol-scale-line {
+  position: absolute;
+  bottom: 75px;
+  left: 20px;
+  padding: 2px;
+  background: rgba(189, 189, 189, 0.781);
+  font-size: 0.88em;
+  font-family: Arial, sans-serif;
+  border-bottom: 2px solid rgb(61, 61, 61);
+  border-right: 2px solid rgb(61, 61, 61);
+  border-left: 2px solid rgb(61, 61, 61);
+}
