--- a/my_app/style.css
+++ b/my_app/style.css
@@ -78,7 +78,7 @@
 }
 
 #remove-marker:hover {
-  background-color:rgb(255, 0, 0);
+  background-color:rgb(218, 19, 19);
 }
 
 @media (max-width: 768px) {
@@ -139,4 +139,24 @@
   border-bottom: 2px solid rgb(61, 61, 61);
   border-right: 2px solid rgb(61, 61, 61);
   border-left: 2px solid rgb(61, 61, 61);
+}
+
+.hover-text {
+  position: absolute;
+  bottom: 100%;
+  left: 100%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  visibility: hidden;
+  white-space: nowrap;
+}
+
+.copy-icon:hover .hover-text {
+  opacity: 1;
+  visibility: visible;
 }
