--- a/my_app/style.css
+++ b/my_app/style.css
@@ -74,7 +74,8 @@
   border-radius: 5px;
   cursor: pointer;
   font-weight: bold;
-  font-size: 0.8em;
+  font-size: 0.9em;
+  font-family: 'Trebuchet MS', Arial, sans-serif;
 }
 
 #remove-marker:hover {
